[fix] 修正使用者不允許追蹤自己的捕捉錯誤
